# SynapseOS

./: .gitignore  CMakeLists.txt  FSL_LICENSE  README.md  SynapseOS_log.txt  boot.ASM  build.bat  build.sh  codeql-analysis.yml  disk.img  main.c  make_listfs.c  run_qemu.bat  script.ld  start.bxrc  startup.asm  workspace.code-workspace
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
disk/: boot.cfg
isodir/: Readme.txt
run/: A.img  build.bat  build.sh  build_and_run.bat  build_and_run_no_wsl.bat  debug.sh  run.sh  run_bochs.bxrc  run_qemu.bat
src/: boot.asm  grub.cfg  kernel.asm  kernel.c  link.ld  main.c  script.ld  startup.asm
src/boot/: boot.asm
src/drivers/: cpu_detect.c  floppy.c
src/include/: NeraMath.h  cmos.h  cpu_detect.h  floppy.h  fonts.h  gdt.h  idt.h  interdesctbl.h  kbd.h  kernel.h  memmap.h  memory_manager.h  multiboot.h  phys_mem.h  pic.h  ports.h  qemu_log.h  shell.h  stdlib.h  time.h  tty.h  vga.h  virt_mem.h
src/kernel/: SynapseOS_log.txt  build.sh  kernel.asm  kernel.c  link.ld  main.c  run.sh  startup.asm
src/kernel/Modules/: Interrupt_Descriptor_Table.c  idt.c  (+4 more)
src/lib/: interrupts.c  interrupts.h  scancodes.c  scancodes.h  stdlib.c  stdlib.h  tty.c  tty.h
src/modules/: ELF.c  NeraMath.c  PE.c  cmos.c  cpu_detect.c  filesystems.c  fonts.c  gdt.c  idt.c  irq_wrappers.asm  kbd.c  makefile  memory_manager.c  phys_mem.c  pic.c  ports.c  qemu_log.c  run_bochs.bxrc  shell.c  stdlib.c  time.c  tty.c  vga.c  virt_mem.c
utils/: make_listfs  make_listfs.c
(+25 files in other folders)
